--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </section>
       </section>
     </main>
-    <footer>
+    <section>
       <form id="contact-form">
         <h2>Your Email</h2>
         <section class="input-section">
@@ -88,6 +88,9 @@
         </section>
         <button class="input-section" type="submit">Send</button>
       </form>
+    </section>
+    <footer>
+      <h3>Copyright @ anonymous Inc.</h3>
     </footer>
   </body>
 </html>
